--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "barryvdh/laravel-ide-helper": "^2.3",
+        "caouecs/laravel-lang": "~3.0",
         "darkaonline/l5-swagger": "^5.0",
         "doctrine/dbal": "~2.3",
         "infyomlabs/adminlte-templates": "5.4.x-dev",
