--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "jlapp/swaggervel": "dev-master",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4.0"
+        "laravelcollective/html": "^5.4.0",
+        "yajra/laravel-datatables-buttons": "^1.0",
+        "yajra/laravel-datatables-oracle": "^7.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
