--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "barryvdh/laravel-cors": "^0.9.2",
         "barryvdh/laravel-ide-helper": "^2.3",
         "caouecs/laravel-lang": "~3.0",
         "darkaonline/l5-swagger": "^5.0",
