Commit com rotas para JSON da listagem de expedições e de uma iterna, funcionando

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
+        "league/fractal": "^0.16.0",
         "unisharp/laravel-ckeditor": "^4.6",
         "yajra/laravel-datatables-buttons": "^1.0",
         "yajra/laravel-datatables-oracle": "^7.5"
