Commit com Dropzone js funcionando, Cropper ainda nao. Upload de foto rolando, ainda sem integracao com cloudinary

--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "cropper": "^3.0.0-rc.3",
+    "cropperjs": "^1.0.0-rc.3"
   }
 }
