--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^3.2.3",
-    "jquery": "^3.1.1",
+    "jquery": "^3.3.1",
     "laravel-mix": "0.*",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.5"
   },
   "dependencies": {
-    "cropper": "^3.0.0-rc.3",
-    "sweetalert2": "^6.6.9"
+    "cropper": "^3.1.6",
+    "sweetalert2": "^6.11.5"
   }
 }
