--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "cross-env": "^3.2.3",
     "jquery": "^3.3.1",
     "laravel-mix": "0.*",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.10",
     "marked": "0.3.9"
   },
   "dependencies": {
-    "cropper": "^3.1.6",
+    "cropperjs": "^1.3.5",
     "sweetalert2": "^6.11.5"
   }
 }
