--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -8,5 +8,6 @@
   "/css/tesseract.css": "/css/tesseract.css",
   "/mix.js": "/mix.js",
   "/css/cropper.css": "/css/cropper.css",
-  "/css/sweetalert2.css": "/css/sweetalert2.css"
+  "/css/sweetalert2.css": "/css/sweetalert2.css",
+  "/js/sweetalert2.min.js": "/js/sweetalert2.min.js"
 }
