--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^3.2.3",
     "jquery": "^3.3.1",
-    "laravel-mix": "0.*",
+    "laravel-mix": "2.1",
     "lodash": "^4.17.10",
     "marked": "0.3.9"
   },
