--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,6 +4,7 @@
     "/css/tesseract.css": "/css/tesseract.css",
     "/css/dropzone.css": "/css/dropzone.css",
     "/css/sweetalert2.css": "/css/sweetalert2.css",
+    "/js/sweetalert2.min.js": "/js/sweetalert2.min.js",
     "/css/cropper.min.css": "/css/cropper.min.css",
     "/js/cropper.min.js": "/js/cropper.min.js"
 }
